# bods-archive

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
scripts/: archive.sh  timetable.sh
scripts/perl/: health.pl
scripts/perl/lib/: lib.pl
scripts/perl/lib/OpenInnovations/: CalendarChart.pm  ColourScale.pm
scripts/python/: BulkDownloader.py  OperatorPerformance.py  archive-downloader.py  gtfs-realtime-utils.py  gtfs_realtime_utils.py  gtfs_utils.py  gtfsrt_to_csv.py  gtfsrt_to_parquet.py  operator_performance.ipynb
