[project]
name = "bods-archive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "duckdb>=1.4.3",
    "gtfs-realtime-bindings>=2.0.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.1",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
]
